# stim_surface_code

./: .gitmodules  Pipfile  README.md  pyproject.toml  setup.py
examples/: 00_test_mem.ipynb  01_test_stab.ipynb  02_plotting.ipynb  03_sinter.ipynb
stim_surface_code/: __init__.py  memory.py  noise.py  patch.py  stability.py
