[tool.poetry]
name = "stim-surface-code"
version = "1.0"
description = "Stim implementation of surface code"
authors = ["Jason Chadwick <jchadwick100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stim = "^1.12.1"
sinter = "^1.12.1"
PyMatching = "^2.1.0"
matplotlib = "^3.8.2"
SciPy = "^1.11.4"
numpy = "^1.26.3"
typing-extensions = "^4.9.0"
qc-utils = {git = "https://github.com/jasonchadwick/qc_utils.git"}
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
